# zjyo

./: .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  install.sh  test.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci-cd.yml
completions/: zjyo.bash  zjyo.fish  zjyo.zsh
src/: cli.rs  database.rs  entry.rs  lib.rs  main.rs  tests.rs
tests/: integration_tests.rs
